# geographiclib-doc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
doc/: GeographicLib.dox.in
geodesic-papers/: .htaccess  CMakeLists.txt  FOOTER.html  biblio.sh  geodesic-biblio.txt  helmert80-en.html  helmert84-en.html
misc/: CMakeLists.txt  bessel-errata.html  geod-addenda.html  geod.html  index.html  jacobi-errata.html  oindex.html  tm-addenda.html  tm.html
source/: CMakeLists.txt  conf.py  index.rst  nindex.rst
source/doc/: coding.rst  library.rst  research.rst  triaxial.rst
